src/css/base.css
:root {
    --controls-height: calc(2.5em + 8px);
}

:root, .theme-light, .theme-dark {
    --bulma-primary: #3270ed;
    --bulma-primary-h: 220deg;
    --bulma-primary-s: 84%;
    --bulma-primary-l: 56%;
}

body {
    background: var(--bulma-background);
    color: var(--bulma-text);
    block-size: 100lvb;
    display: grid;
    grid-template:
            "controls" auto
            "logs" 1fr / 1fr;
}

@media screen and (max-width: 640px) {
    body {
        grid-template:
            "logs" 1fr
            "controls" auto / 1fr;
    }
}

